--- a/style.css
+++ b/style.css
@@ -2,12 +2,14 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    user-select: none;
 }
 html, body{
     height: 100%;
 }
 html{
     font-size: 16px;
+    background-color: #F2CFC2;
 }
 body{
     display: flex;
@@ -63,7 +65,7 @@ body{
     /* border: 1px solid black; */
     border: none;
     border-radius: 13px;
-    background-color: #D9A796;
+    background-color: #D99E89;
     color: white;
 }
 .zero{
@@ -77,11 +79,10 @@ body{
 }
 
 .button:hover{
-    background-color: rgb(197, 197, 197);
+    opacity: 0.9;
 }
 .button:active{
-    background-color: rgb(79, 35, 191);
-    color: white;
+    filter: brightness(80%);
 }
 
 /* header */
@@ -97,6 +98,7 @@ body{
     border: 0;
     border-radius: 50%;
     margin: 0 5px;
+    background-color: #F2F2F2;
 }
 /* .cancel{
     background-color: red;
